docs: update CI/CD and Java bundling documentation
- Mark github-actions.md task as complete
- Update java-bundling.md with implemented features
- Add CI build info and bundled JRE section to CLAUDE.md